...
		android:layout_width="fill_parent"
		android:layout_height="0dp"
		>

		<!-- Timer Button -->
		<Button
			android:id="@+id/timer_btn"
			android:onClick="onStart"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_gravity="center_horizontal"
			android:background="@drawable/new_session_controls_btn"
			android:text="@string/title_start_session"
...
			android:textAllCaps="true"
			android:textColor="@drawable/new_session_controls_txt"
			/>

		<!-- Timer Button Stop -->
		<Button
			android:id="@+id/timer_stop_btn"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_gravity="center_horizontal"
			android:background="@drawable/new_session_controls_btn"
			android:text="@string/title_end_session"
			android:textStyle="bold"
...
