...
    	android:orientation="horizontal"
    	android:weightSum="2"
    	>
    	
	    <Button
	        style="?android:attr/buttonBarButtonStyle" 
		    android:id="@+id/alert_dialog_new_session_btn_cancel"
		    android:layout_weight="1"
		    android:layout_width="0sp"
		    android:layout_height="wrap_content"
		    android:background="@drawable/main_menu_profile_bg"
	    	android:padding="15sp"
		    android:text="@string/dialog_new_session_btn_cancel"
		    android:textColor="@drawable/main_menu_profile_txt"
		    android:textSize="12sp"
		    />
	    
	    <Button
	        style="?android:attr/buttonBarButtonStyle" 
		    android:id="@+id/alert_dialog_new_session_btn_ok"
		    android:layout_weight="1"
		    android:layout_width="0sp"
		    android:layout_height="wrap_content"
		    android:background="@drawable/main_menu_profile_bg"
	    	android:padding="15sp"
		    android:text="@string/dialog_new_session_btn_ok"
...
